Changing For latest push

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <li><a class="hover:text-orange-600 duration-300">Resources</a></li>
               <li><a class="hover:text-orange-600 duration-300">About Us</a></li>
               <li><a class="hover:text-orange-600 duration-300">Career</a></li>
-              <li><a class="hover:text-orange-600 duration-300">Contact Us</a></li>
+              <li><a class="hover:text-orange-600 duration-300">Contact U</a></li>
             </ul>
           </div>
    <!-- End DropDown -->
